--- a/publication.html
+++ b/publication.html
@@ -345,7 +345,7 @@ Expert Systems with Applications, 2025<br>
 <br>
 A. Madan<sup>*</sup>, N. Peri<sup>*</sup>, D. Ramanan<sup>#</sup>, S. Kong<sup>#</sup>
 <br>
-In NeurIPS Datasets and Benchmarks, 2024<br>
+In NeurIPS, 2024<br>
 [<a href="https://arxiv.org/abs/2312.14494">paper</a>]
 [<a href="https://github.com/anishmadan23/foundational_fsod">code</a>]
 [<a href="https://neurips.cc/media/neurips-2024/Slides/97860.pdf">poster</a>]
@@ -712,7 +712,7 @@ In EMNLP, 2023
 <a href="aimerykong_files/insdet.png">Y. Li</a>,
 S. Kong
 <br>
-In NeurIPS Datasets and Benchmarks, 2023
+In NeurIPS, 2023
 <br>
 [<a href="https://github.com/insdet/instance-detection">github</a>]
 [<a href="https://neurips.cc/virtual/2023/poster/73409">paper</a>]
@@ -737,7 +737,7 @@ S. Kong,
 <a href="https://xh-liu.github.io/">X. Liu</a>,
 <a href="https://oceanpang.github.io/">J. Pang</a>
 <br>
-In NeurIPS Datasets and Benchmarks, 2023
+In NeurIPS, 2023
 <br>
 [<a href="https://github.com/OpenRobotLab/OV_PARTS">github</a>]
 [<a href="https://neurips.cc/virtual/2023/poster/73650">paper</a>]
