--- a/publication.html
+++ b/publication.html
@@ -1658,13 +1658,23 @@ Pattern Recognition Letters, 2012
 <h3>Abstract/Workshop Papers</h3>
 <ul>
 
+<li>
+<div class="publication">
+<p> Benjamin A. Lloyd, Marc-Élie Adaïmé, Surangi W. Punyasena, Timothy J. Gallaher, Rosalie M. Hermans, Shu Kong, Caroline A.E. Strömberg
+	"<font color=#AF7817>Deep learning approaches to the phylogenetic placement and classification of fossil grass silica short cell phytoliths</font>", 
+	<em><a href="https://connects.geosociety.org/">GSA Connects</a></em>, San Antonio, Texas, USA, 19–22 October 2025. 
+<br>
+</p>
+</div>
+</li>
 
+	
 
 <li>
 <div class="publication">
 <p> Tian Liu, Huixin Zhang, Shubham Parashar, Shu Kong,
 	"<font color=#AF7817>Few-Shot Recognition via Stage-Wise Retrieval-Augmented Finetuning</font>", 
-	<em><a href="https://computer-vision-in-the-wild.github.io/cvpr-2025/">CVinW</a></em>, Juue 2025.
+	<em><a href="https://computer-vision-in-the-wild.github.io/cvpr-2025/">CVinW</a></em>, the Music City Center, Nashville TN, USA, June 2025.
 <br>
 </p>
 </div>
@@ -1674,7 +1684,7 @@ Pattern Recognition Letters, 2012
 <div class="publication">
 <p> Sophie Zhou, Shu Kong, 
 	"<font color=#AF7817>Dare to Plagiarize? Plagiarized Painting Identification and Retrieval</font>", 
-	<em><a href="https://sites.google.com/view/avss2025-tw/ieee-avss?authuser=0">AVSS</a></em>, August 2025.
+	<em><a href="https://sites.google.com/view/avss2025-tw/ieee-avss?authuser=0">AVSS</a></em>, Tainan, Taiwan, August 2025.
 <br>
 </p>
 </div>
