--- a/publication.html
+++ b/publication.html
@@ -60,6 +60,7 @@ ICCV, 2025
 [<a href="https://arxiv.org/abs/2506.22908">paper</a>]
 [<a href="https://github.com/WangYZ1608/BPT">webpage</a>]
 [<a href="https://github.com/WangYZ1608/BPT">code</a>]
+[<a href="aimerykong_files/BPT_poster.pdf">poster</a>]
 <br>
 </td>
 
@@ -179,18 +180,18 @@ arXiv:2506.01724, 2025
 
 <tr>
 <td width="35%" height=150>
-<a href="https://www.biorxiv.org/content/10.1101/2025.01.05.631390v1">
+<a href="https://www.cambridge.org/core/journals/paleobiology/article/addressing-the-open-world-detecting-and-segmenting-pollen-on-palynological-slides-with-deep-learning/7F12E2B1F72DC18ABA73D460A90BCDD4">
 <img src="aimerykong_files/thumbnail_pollenDet.jpg" height="120"  border="0">
 </a><br>
 </td>
 <td>
-<a href="https://www.biorxiv.org/content/10.1101/2025.01.05.631390v1"><b>Addressing the Open World: Detecting and Segmenting Pollen on Palynological Slides with Deep Learning</b></a>
+<a href="https://www.cambridge.org/core/journals/paleobiology/article/addressing-the-open-world-detecting-and-segmenting-pollen-on-palynological-slides-with-deep-learning/7F12E2B1F72DC18ABA73D460A90BCDD4"><b>Addressing the Open World: Detecting and Segmenting Pollen on Palynological Slides with Deep Learning</b></a>
 <br>
 J. T. Feng, S. P. Satheesan, S. Kong, T. H. Donders, S. W. Punyasena
 <br>
 Paleobiology, 2025
 <br>
-[<a href="https://doi.org/10.1101/2025.01.05.631390">paper</a>]
+[<a href="https://www.cambridge.org/core/journals/paleobiology/article/addressing-the-open-world-detecting-and-segmenting-pollen-on-palynological-slides-with-deep-learning/7F12E2B1F72DC18ABA73D460A90BCDD4">paper</a>]
 [<a href="https://github.com/paleopollen/ndpi-tile-cropper-cli">code for tile cropping</a>]
 [<a href="https://github.com/paleopollen/pollen-detection-cli">code for pollen detection</a>]
 [<a href="https://github.com/paleopollen/open_world_pollen_detection">code of Jupyter Notebook</a>]
