--- a/index.html
+++ b/index.html
@@ -212,9 +212,9 @@ Congratulations to  <a href="https://www.linkedin.com/in/sophie-zhou-5025b8313" 
 
 <li>
 <p>
-Congratulations to <a href="https://anthropology.sas.upenn.edu/people/jennifer-feng/">Jennifer</a> on the <a href="https://www.cambridge.org/core/journals/paleobiology"  target="_blank">Paleobiology
+Congratulations to <a href="https://anthropology.sas.upenn.edu/people/jennifer-feng/">Jennifer</a> on the <a href="https://www.cambridge.org/core/journals/paleobiology/article/addressing-the-open-world-detecting-and-segmenting-pollen-on-palynological-slides-with-deep-learning/7F12E2B1F72DC18ABA73D460A90BCDD4"  target="_blank">Paleobiology
 <img src="https://www.cambridge.org/core/services/aop-file-manager/file/567a62235cefc91d0c2d4094/Paleontological-Society-Logo-680x460px-1-.jpg", height="30"></a> 
-	paper "<a href="https://doi.org/10.1101/2025.01.05.631390"  target="_blank">Addressing the Open World: Detecting and Segmenting Pollen on Palynological Slides with Deep Learning</a>"! (5/15/2025)
+	paper "<a href="https://www.cambridge.org/core/journals/paleobiology/article/addressing-the-open-world-detecting-and-segmenting-pollen-on-palynological-slides-with-deep-learning/7F12E2B1F72DC18ABA73D460A90BCDD4"  target="_blank">Addressing the Open World: Detecting and Segmenting Pollen on Palynological Slides with Deep Learning</a>"! (5/15/2025)
 </a>
 </li>
 
