--- a/group.html
+++ b/group.html
@@ -55,7 +55,7 @@
 		<li><a href="http://www.neeharperi.com/">Neehar Peri</a> (PhD at CMU, co-advised by Deva Ramanan)</li>
 		<li><a href="https://www.linkedin.com/in/runzhi-wang/">Runzhi Wang</a> (PhD at TAMU, co-adivsed by Jiang Hu)</li>
 		<li><a href="https://bd.linkedin.com/in/hasnat-md-abdullah">Hasnat Md. Abdullah</a> (PhD at TAMU, co-advised by Ruihong Huang; now PhD at UIUC)</li>
-		<li><a href="https://github.com/PardisTaghavi">Pardis Taghavi</a> (PhD at TAMU, co-advised by Reza Langari)</li>						
+		<li><a href="https://github.com/PardisTaghavi">Pardis Taghavi</a> (PhD at TAMU)</li>						
 		<li><a href="https://linzhiqiu.github.io/">Zhiqiu Lin</a> (PhD at CMU, co-advised by Deva Ramanan)</li>
 		<li><a href="https://ezharjan.github.io/">Alexander Ezharjan</a> (MS at UMacau, co-advised by Cheng-Zhong Xu; now PhD at GWU)</li>
 		<li><a href="https://shubhamprshr27.github.io/">Shubham Parashar</a> (MS at TAMU; now PhD student at TAMU)</li>	
@@ -79,7 +79,7 @@
 	
 <h4>Undergraduate Students</h4>
 	<ul>
-		<li><a href="https://www.linkedin.com/in/joanneliu88/">Joanne Liu</a> (TAMU, co-advised by Jeeeun Kim)</li>
+		<li><a href="https://www.linkedin.com/in/joanneliu88/">Joanne Liu</a> (TAMU, co-advised by Jeeeun Kim; now at Capital One)</li>
 		<li>Yanan Bu (UMacau)</li>
 		<li>Runxin Liu (UMacau)</li>
 		<li>Yupeng Tong (UMacau)</li>
