--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	<p style="font-size:16px;font-family:Times">
 		My research lies in <strong>Computer Vision</strong> and its interactions with other fields (e.g., ML, NLP, HCI, robotics, and graphics), broad
 		applications (e.g., AR/VR and autonomous driving), and diverse disciplines (e.g., biology and paleoecology). 
-		My current research focuses on <a href="https://vplow.github.io"  target="_blank"><strong>Visual Perception via Learning in the Open World (VPLOW)</strong></a>. 
+		My current research focuses on <a href="https://vplow.github.io"  target="_blank"><strong>Open-World Visual</strong></a>. 
 		My previous paper on this topic was recognized for <a href="https://arxiv.org/abs/2104.02939"  target="_blank">Best Paper / Marr Prize at ICCV 2021</a>.
 		My previous work that applied AI to interdisciplinary research built a high-throughput pollen analysis system,
 		which was featured by the National Science Foundation that 
@@ -131,6 +131,9 @@
 		
 <h3 style="font-size:20px;font-family:Times">Teaching</h3>
 <ul style="font-size:15px;font-family:Times;line-height:18px">	
+	<li>
+		[CISC7401] Advanced Machine Learning [<a href="./"  target="_blank">syllabus</a>] (Spring 2026, UMacau)
+	</li>
 	<li>
 		[CISC3011] Digital Image Processing [<a href="./aimerykong_files/2025-1-CISC3011-Digital-Image-Processing.pdf"  target="_blank">syllabus</a>] (Fall 2025, UMacau)
 	</li>
