--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 	<p style="font-size:16px;font-family:Times">
 		My research lies in <strong>Computer Vision</strong> and its interactions with other fields (e.g., ML, NLP, HCI, robotics, and graphics), broad
 		applications (e.g., AR/VR and autonomous driving), and diverse disciplines (e.g., biology and paleoecology). 
-		My current research focuses on <a href="https://vplow.github.io"  target="_blank"><strong>Open-World Visual</strong></a>. 
-		My previous paper on this topic was recognized for <a href="https://arxiv.org/abs/2104.02939"  target="_blank">Best Paper / Marr Prize at ICCV 2021</a>.
-		My previous work that applied AI to interdisciplinary research built a high-throughput pollen analysis system,
+		I am establishing the research topic <a href="https://vplow.github.io"  target="_blank"><strong>Open-World Vision</strong></a>, on which my previous paper was recognized for <a href="https://arxiv.org/abs/2104.02939"  target="_blank">Best Paper / Marr Prize at ICCV 2021</a>.
+		On this topic, I study how to make vision algorithm applicable in the real open world, e.g., through interdisciplinary research.
+		My previous interdisciplinary research built a high-throughput pollen analysis system,
 		which was featured by the National Science Foundation that 
 		“<a href="https://beta.nsf.gov/news/modern-computational-tools-open-new-era-fossil-pollen-research"  target="_blank">opens a new era of fossil pollen research</a>”.
 	</p>
