--- a/publication.html
+++ b/publication.html
@@ -42,6 +42,22 @@
 <tbody>
 
 
+<tr>
+<td width="35%" height=150>
+<a href="https://arxiv.org/abs/2404.01064">
+<img src="aimerykong_files/roadside3D.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2404.01064"><b>Roadside Monocular 3D Detection via 2D Detection Prompting</b></a>
+<br>
+Y. Ma, W. Hua, Y. Li, S. Kong
+<br>
+In WACV, 2026<br>
+[<a href="https://arxiv.org/abs/2404.01064">paper</a>]
+<br>
+</td>
+
 
 
 <tr>
@@ -647,22 +663,6 @@ Proceedings of the National Academy of Sciences (PNAS) Nexus, 2024<br>
 
 	
 	
-<tr>
-<td width="35%" height=150>
-<a href="https://arxiv.org/abs/2404.01064">
-<img src="aimerykong_files/roadside3D.jpg" height="120"  border="0">
-</a><br>
-</td>
-<td>
-<a href="https://arxiv.org/abs/2404.01064"><b>Roadside Monocular 3D Detection via 2D Detection Prompting</b></a>
-<br>
-Y. Ma, S. Wei, C. Zhang, W. Hua, Y. Li, S. Kong
-<br>
-arXiv:2404.01064, 2024<br>
-[<a href="https://arxiv.org/abs/2404.01064">paper</a>]
-<br>
-</td>
-
 
 
 	
