--- a/publication.html
+++ b/publication.html
@@ -53,7 +53,7 @@
 <br>
 Y. Ma, W. Hua, Y. Li, S. Kong
 <br>
-In WACV, 2026<br>
+WACV, 2026<br>
 [<a href="https://arxiv.org/abs/2404.01064">paper</a>]
 <br>
 </td>
