--- a/publication.html
+++ b/publication.html
@@ -55,6 +55,7 @@ Y. Ma, W. Hua, Y. Li, S. Kong
 <br>
 WACV, 2026<br>
 [<a href="https://arxiv.org/abs/2404.01064">paper</a>]
+[<a href="https://github.com/mayechi/Pro3D">code</a>]
 <br>
 </td>
 
@@ -98,7 +99,7 @@ K. Yin, Z. Zhang, S. Kong, T. Gao, C-Z Xu, H. Kong
 ICCV, 2025
 <br>
 [<a href="https://arxiv.org/abs/2507.03504">paper</a>]
-[code to release]
+[<a href="https://github.com/exaids66/BiCD">code</a>]
 <br>
 </td>
 
@@ -615,6 +616,7 @@ X. Xu, S. Kong, T. Hu, Z. Liu, H. Bao
 <br>
 In <a href="https://cvpr.thecvf.com/Conferences/2024">CVPR</a>, 2024<br>
 [<a href="https://arxiv.org/pdf/2403.06793.pdf">paper</a>]
+[<a href="https://github.com/xiaogang00/pretrain_model_boost_restoration">code</a>]
 <br>
 </td>
 		
