--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
 <li>
 <p>
-Congratulations to  <a href="https://github.com/mayechi/Pro3D"  target="_blank">Yechi</a> on the <a href="https://iccv.thecvf.com/"  target="_blank">WACV'26
+Congratulations to  <a href="https://github.com/mayechi/Pro3D"  target="_blank">Yechi</a> on the <a href="https://wacv.thecvf.com/Conferences/2026"  target="_blank">WACV'26
 <img src="./img2/logo_wacv26.jpg", height="25"></a> 
 	paper "<a href="https://arxiv.org/abs/2404.01064"  target="_blank">Roadside Monocular 3D Detection via 2D Detection Prompting</a>"! (11/22/2025)
 </a>
