--- a/publication.html
+++ b/publication.html
@@ -136,15 +136,15 @@ AVSS, 2025
 </a><br>
 </td>
 <td>
-<a href="https://arxiv.org/abs/2506.04713"><b>Robust Few-Shot Vision-Language Model Adaptation</b></a>
+<a href="https://arxiv.org/abs/2506.04713"><b>Enabling Validation for Robust Few-Shot Recognition</b></a>
 <br>
-H. Wang, T. Liu, S. Kong
+H. Wang<sup>*</sup>, T. Liu<sup>*</sup>, S. Kong
 <br>
 arXiv:2506.04713, 2025
 <br>
 [<a href="https://arxiv.org/abs/2506.04713">paper</a>]
-[<a href="https://hannawang09.github.io/projects/srapf/">webpage</a>]
-[<a href="https://github.com/hannawang09/SRAPF">code</a>]
+[<a href="https://hannawang09.github.io/projects/vest/">webpage</a>]
+[<a href="https://github.com/hannawang09/VEST">code</a>]
 <br>
 </td>
 
@@ -275,7 +275,7 @@ In <a href="https://cvpr.thecvf.com/">CVPR</a>, 2025<br>
 <td>
 <a href="https://shenqq377.github.io/IDOW/"><b>Solving Instance Detection from an Open-World Perspective</b></a>
 <br>
-Q. Shen*, Y. Zhao*, N. Kwon, J. Kim, Y. Li, S. Kong
+Q. Shen<sup>*</sup>, Y. Zhao<sup>*</sup>, N. Kwon, J. Kim, Y. Li, S. Kong
 <br>
 In <a href="https://cvpr.thecvf.com/">CVPR</a>, 2025<br>
 [<a href="https://shenqq377.github.io/IDOW/">website</a>]
