--- a/publication.html
+++ b/publication.html
@@ -150,6 +150,25 @@ arXiv:2506.04713, 2025
 
 
 
+<tr>
+<td width="35%" height=150>
+<a href="https://arxiv.org/abs/2512.10244">
+<img src="aimerykong_files/icon_SWIFT.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2512.10244"><b>Enabling Validation for Robust Few-Shot Recognition</b></a>
+<br>
+T. Liu, A. Basu, J. Caverlee, S. Kong
+<br>
+arXiv:2506.04713, 2025
+<br>
+[<a href="https://arxiv.org/abs/2512.10244">paper</a>]
+[<a href="https://tian1327.github.io/SWIFT">code</a>]
+<br>
+</td>
+
+
 
 <tr>
 <td width="35%" height=150>
