--- a/publication.html
+++ b/publication.html
@@ -111,7 +111,7 @@ ICCV, 2025
 <tr>
 <td width="35%" height=150>
 <a href="https://arxiv.org/abs/2506.23132">
-<img src="img2/icon_dare-to-plagiarize.jpg" height="120"  border="0">
+<img src="img2/icon_dare-to-plagiarize.jpg" height="100"  border="0">
 </a><br>
 </td>
 <td>
@@ -157,11 +157,11 @@ arXiv:2506.04713, 2025
 </a><br>
 </td>
 <td>
-<a href="https://arxiv.org/abs/2512.10244"><b>Enabling Validation for Robust Few-Shot Recognition</b></a>
+<a href="https://arxiv.org/abs/2512.10244"><b>Solving Semi-Supervised Few-Shot Learning from an Auto-Annotation Perspective</b></a>
 <br>
 T. Liu, A. Basu, J. Caverlee, S. Kong
 <br>
-arXiv:2506.04713, 2025
+arXiv:2512.10244, 2025
 <br>
 [<a href="https://arxiv.org/abs/2512.10244">paper</a>]
 [<a href="https://tian1327.github.io/SWIFT">code</a>]
