--- a/group.html
+++ b/group.html
@@ -96,7 +96,8 @@
 	
 <h4>High-School Students</h4>
 	<ul>
-		<li><a href="https://www.linkedin.com/in/sophie-zhou-5025b8313/">Sophie Zhou</a> (Summer 2024, Cheyenne Mountain High School; Summer Scholar in the Wharton School of UPenn and Jerome Fisher M&T program)
+		<li><a href="https://www.linkedin.com/in/sophie-zhou-5025b8313/">Sophie Zhou</a>  (Summer 2024, Cheyenne Mountain High School; admitted to Yale)
+			<!--(Summer 2024, Cheyenne Mountain High School; Summer Scholar in the Wharton School of UPenn and Jerome Fisher M&T program)-->
 		</li>
 		<li><a href="https://www.linkedin.com/in/sarthakjain101/">Sarthak Jain</a> (Summer 2022, Los Gatos High School; now undergrad at UIUC)
 		</li>
