--- a/publication.html
+++ b/publication.html
@@ -127,6 +127,30 @@ AVSS, 2025
 
 
 
+
+
+<tr>
+<td width="35%" height=150>
+<a href="https://arxiv.org/pdf/2512.15748">
+<img src="aimerykong_files/icon_POC.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://arxiv.org/pdf/2512.15748"><b>Surely Large Multimodal Models (Don’t) Excel in Visual Species Recognition?</b></a>
+<br>
+T. Liu<sup>*</sup>, A. Basu<sup>*</sup>, J. Caverlee, S. Kong
+<br>
+arXiv:2512.15748, 2025
+<br>
+[<a href="https://arxiv.org/pdf/2512.15748">paper</a>]
+[<a href="https://tian1327.github.io/POC">webpage</a>]
+[<a href="https://github.com/tian1327/POC">code</a>]
+<br>
+</td>
+
+
+
+
 	
 
 <tr>
