--- a/index.html
+++ b/index.html
@@ -106,6 +106,12 @@
 <h3 style="font-size:20px;font-family:Times">Links</h3>
 <ul style="font-size:15px;font-family:Times;line-height:18px">	
 	<li>
+	<a href="https://autoexpert-arena.github.io/"  target="_blank">The 1st AutoExpert Workshop at CVPR'26</a>
+	</li>	
+	<li>
+	<a href="https://vplow.github.io/vplow_6th.html"  target="_blank">The 6th Open World Vision Workshop at CVPR'26</a>
+	</li>
+	<li>
 	<a href="https://vplow.github.io/vplow_5th.html"  target="_blank">The 5th Open World Vision Workshop: Visual Perception via Learning in an Open World (VPLOW) at CVPR'25</a>
 	</li>
 	<li>
@@ -132,7 +138,7 @@
 <h3 style="font-size:20px;font-family:Times">Teaching</h3>
 <ul style="font-size:15px;font-family:Times;line-height:18px">	
 	<li>
-		[CISC7401] Advanced Machine Learning [<a href="./"  target="_blank">syllabus</a>] (Spring 2026, UMacau)
+		[CISC7401] Advanced Machine Learning [<a href="./aimerykong_files/2025-2-CISC7401-001-ADVANCED-MACHINE-LEARNING.pdf"  target="_blank">syllabus</a>] (Spring 2026, UMacau)
 	</li>
 	<li>
 		[CISC3011] Digital Image Processing [<a href="./aimerykong_files/2025-1-CISC3011-Digital-Image-Processing.pdf"  target="_blank">syllabus</a>] (Fall 2025, UMacau)
