--- a/group.html
+++ b/group.html
@@ -82,7 +82,7 @@
 		<li><a href="https://www.linkedin.com/in/joanneliu88/">Joanne Liu</a> (TAMU, co-advised by Jeeeun Kim; now at Capital One)</li>
 		<li>Yanan Bu (UMacau)</li>
 		<li>Runxin Liu (UMacau)</li>
-		<li>Yupeng Tong (UMacau)</li>
+		<li>Yupeng Tong (UMacau, joining USC as grad)</li>
 		<li><a href="https://yogerchen.github.io/">Yoger Un Lok Chen</a> (UMacau; now MS student at Tsinghua)</li>
 		<li>Keiran Xinyu Wang (UMacau; now MS at HKUST)</li>
 		<li>Anna Yuting Cao (UMacau; now MS at HKU)</li>
@@ -96,7 +96,7 @@
 	
 <h4>High-School Students</h4>
 	<ul>
-		<li><a href="https://www.linkedin.com/in/sophie-zhou-5025b8313/">Sophie Zhou</a>  (Summer 2024, Cheyenne Mountain High School; admitted to Yale)
+		<li><a href="https://www.linkedin.com/in/sophie-zhou-5025b8313/">Sophie Zhou</a>  (Summer 2024, Cheyenne Mountain High School; joining Yale as undergrad)
 			<!--(Summer 2024, Cheyenne Mountain High School; Summer Scholar in the Wharton School of UPenn and Jerome Fisher M&T program)-->
 		</li>
 		<li><a href="https://www.linkedin.com/in/sarthakjain101/">Sarthak Jain</a> (Summer 2022, Los Gatos High School; now undergrad at UIUC)
