--- a/group.html
+++ b/group.html
@@ -79,10 +79,10 @@
 	
 <h4>Undergraduate Students</h4>
 	<ul>
-		<li><a href="https://www.linkedin.com/in/joanneliu88/">Joanne Liu</a> (TAMU, co-advised by Jeeeun Kim; now at Capital One)</li>
 		<li>Yanan Bu (UMacau)</li>
-		<li>Runxin Liu (UMacau)</li>
 		<li>Yupeng Tong (UMacau, joining USC as grad)</li>
+		<li>Runxin Liu (UMacau, joining PolyU as grad)</li>
+		<li><a href="https://www.linkedin.com/in/joanneliu88/">Joanne Liu</a> (TAMU, co-advised by Jeeeun Kim; now at Capital One)</li>
 		<li><a href="https://yogerchen.github.io/">Yoger Un Lok Chen</a> (UMacau; now MS student at Tsinghua)</li>
 		<li>Keiran Xinyu Wang (UMacau; now MS at HKUST)</li>
 		<li>Anna Yuting Cao (UMacau; now MS at HKU)</li>
