--- a/publication.html
+++ b/publication.html
@@ -42,6 +42,28 @@
 <tbody>
 
 
+
+
+<tr>
+<td width="35%" height=150>
+<a href="./">
+<img src="aimerykong_files/icon_EUREXA.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<b>EUREXA: End-User Reconfiguration of Environment with eXplainable Augmentation for Generative Fabrication</b>
+<br>
+Abul Al Arabi, Charles Yushi Cai, Ryann Lu, Shu Kong, Jeeeun Kim
+<br>
+CHI, 2026<br>
+[paper]
+[code]
+<br>
+</td>
+
+
+	
+
 <tr>
 <td width="35%" height=150>
 <a href="https://arxiv.org/abs/2404.01064">
