--- a/publication.html
+++ b/publication.html
@@ -55,7 +55,7 @@
 <br>
 Abul Al Arabi, Charles Yushi Cai, Ryann Lu, Shu Kong, Jeeeun Kim
 <br>
-CHI, 2026<br>
+In <a href="https://chi2026.acm.org/">CHI</a>, 2026<br>
 [paper]
 [code]
 <br>
@@ -75,7 +75,7 @@ CHI, 2026<br>
 <br>
 Y. Ma, W. Hua, Y. Li, S. Kong
 <br>
-WACV, 2026<br>
+In <a href="https://wacv.thecvf.com/Conferences/2026">WACV</a>, 2026<br>
 [<a href="https://arxiv.org/abs/2404.01064">paper</a>]
 [<a href="https://github.com/mayechi/Pro3D">code</a>]
 <br>
