--- a/publication.html
+++ b/publication.html
@@ -94,7 +94,7 @@ In <a href="https://wacv.thecvf.com/Conferences/2026">WACV</a>, 2026<br>
 <br>
 Y. Wang, M. Duan, S. Kong
 <br>
-ICCV, 2025
+In <a href="https://iccv.thecvf.com/">ICCV</a>, 2025
 <br>
 [<a href="https://arxiv.org/abs/2506.22908">paper</a>]
 [<a href="https://github.com/WangYZ1608/BPT">webpage</a>]
@@ -118,7 +118,7 @@ ICCV, 2025
 <br>
 K. Yin, Z. Zhang, S. Kong, T. Gao, C-Z Xu, H. Kong
 <br>
-ICCV, 2025
+In <a href"https://iccv.thecvf.com/">ICCV</a>, 2025
 <br>
 [<a href="https://arxiv.org/abs/2507.03504">paper</a>]
 [<a href="https://github.com/exaids66/BiCD">code</a>]
@@ -141,7 +141,7 @@ ICCV, 2025
 <br>
 S. Zhou, S. Kong
 <br>
-AVSS, 2025
+In <a href="https://sites.google.com/view/avss2025-tw">AVSS</a>, 2025
 <br>
 [<a href="https://arxiv.org/abs/2506.23132">paper</a>]
 <br>
