--- a/publication.html
+++ b/publication.html
@@ -118,7 +118,7 @@ In <a href="https://iccv.thecvf.com/">ICCV</a>, 2025
 <br>
 K. Yin, Z. Zhang, S. Kong, T. Gao, C-Z Xu, H. Kong
 <br>
-In <a href"https://iccv.thecvf.com/">ICCV</a>, 2025
+In <a href="https://iccv.thecvf.com/">ICCV</a>, 2025
 <br>
 [<a href="https://arxiv.org/abs/2507.03504">paper</a>]
 [<a href="https://github.com/exaids66/BiCD">code</a>]
