--- a/group.html
+++ b/group.html
@@ -40,8 +40,7 @@
 		<li><a href="https://diwu96063.github.io/">Di Wu</a> (PhD at UMacau)</li>
 		<li><a href="https://nahyunkwon.github.io/">Nahyun Kwon</a> (PhD at TAMU, co-advised by Jeeeun Kim)</li>
 		<li><a href="https://abulalarabi.com/">Abul Al Arabi</a> (PhD at TAMU, co-advised by Jeeeun Kim)</li>		
-		<li><a href="./">Anwesha Basu</a> (MS at TAMU)</li>
-		<li><a href="./">Kitty Kaiqi Su</a> (MS at UMacau)</li>	
+		<li><a href="https://www.linkedin.com/in/anweshabasu98/">Anwesha Basu</a> (MS at TAMU)</li>
 		<li><a href="./">Hou Un Lei</a> (MS at UMacau)</li>
 		<li><a href="./">Garfield Siyun Ke</a> (MS at UMacau, co-advised by Joseph Dexter)</li>
 		
@@ -75,6 +74,7 @@
 		<li><a href="https://scholar.google.com/citations?user=eZ4WZmIAAAAJ&hl=en">Anish Madan</a> (MSCV at CMU, co-adivsed by Deva Ramanan)</li>		
 		<li><a href="https://aimerykong.github.io/group.html">Satish Reddy</a> (Master at TAMU, co-advised by Ruihong Huang; now at Tesla)</li>
 		<li><a href="https://aimerykong.github.io/group.html">Shubham Gupta</a> (Master at TAMU, co-advised by Ruihong Huang; now at Amazon)</li>	
+		<li><a href="./">Kitty Kaiqi Su</a> (MS at UMacau)</li>	
 	</ul>
 	
 <h4>Undergraduate Students</h4>
