--- a/group.html
+++ b/group.html
@@ -79,8 +79,11 @@
 	
 <h4>Undergraduate Students</h4>
 	<ul>
+		<li>Katsuhiro Kawasaki (UMacau)</li>
 		<li>Yupeng Tong (UMacau, joining USC as grad)</li>
 		<li>Runxin Liu (UMacau, joining PolyU as grad)</li>
+		<li>Jacky Chan Hou Liang (UMacau)</li>
+		<li>Alan Hongze Huang (UMacau)</li>		
 		<li>Yanan Bu (UMacau)</li>
 		<li><a href="https://www.linkedin.com/in/joanneliu88/">Joanne Liu</a> (TAMU, co-advised by Jeeeun Kim; now at Capital One)</li>
 		<li><a href="https://yogerchen.github.io/">Yoger Un Lok Chen</a> (UMacau; now MS student at Tsinghua)</li>
