--- a/publication.html
+++ b/publication.html
@@ -57,7 +57,8 @@ Abul Al Arabi, Charles Yushi Cai, Ryann Lu, Shu Kong, Jeeeun Kim
 <br>
 In <a href="https://chi2026.acm.org/">CHI</a>, 2026<br>
 [paper]
-[code]
+[<a href="https://github.com/abulalarabi/EUREXA">code</a>]
+[<a href="https://abulalarabi.com/EUREXA/">webpage</a>]
 <br>
 </td>
 
