--- a/publication.html
+++ b/publication.html
@@ -47,6 +47,26 @@
 <tr>
 <td width="35%" height=150>
 <a href="./">
+<img src="aimerykong_files/icon_SuperLIDAR.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<b>Super LiDAR Reflectance for Robotic Perception</b>
+<br>
+W. Gao, J. Zhang, M. Zhao, Z. Zhang, S. Kong, M. Ghaffari, D. Song, C-Z Xu, H. Kong
+<br>
+IEEE Robotics and Automation Letters (RA-L), 2026<br>
+[<a href="https://arxiv.org/abs/2508.10398">tech report</a>]
+[code]
+[webpage]
+<br>
+</td>
+
+	
+
+<tr>
+<td width="35%" height=150>
+<a href="./">
 <img src="aimerykong_files/icon_EUREXA.jpg" height="120"  border="0">
 </a><br>
 </td>
