--- a/publication.html
+++ b/publication.html
@@ -57,6 +57,7 @@ W. Gao, J. Zhang, M. Zhao, Z. Zhang, S. Kong, M. Ghaffari, D. Song, C-Z Xu, H. K
 <br>
 IEEE Robotics and Automation Letters (RA-L), 2026<br>
 [<a href="https://arxiv.org/abs/2508.10398">tech report</a>]
+[<a href="https://anonymous.4open.science/r/Super_supplementary_material-6799/README.md">dataset</a>]
 [code]
 [webpage]
 <br>
@@ -73,7 +74,7 @@ IEEE Robotics and Automation Letters (RA-L), 2026<br>
 <td>
 <b>EUREXA: End-User Reconfiguration of Environment with eXplainable Augmentation for Generative Fabrication</b>
 <br>
-Abul Al Arabi, Charles Yushi Cai, Ryann Lu, Shu Kong, Jeeeun Kim
+A. Al Arabi, C. Y. Cai, R. Lu, S. Kong, J. Kim
 <br>
 In <a href="https://chi2026.acm.org/">CHI</a>, 2026<br>
 [paper]
