--- a/group.html
+++ b/group.html
@@ -40,6 +40,8 @@
 		<li><a href="https://diwu96063.github.io/">Di Wu</a> (PhD at UMacau)</li>
 		<li><a href="https://nahyunkwon.github.io/">Nahyun Kwon</a> (PhD at TAMU, co-advised by Jeeeun Kim)</li>
 		<li><a href="https://abulalarabi.com/">Abul Al Arabi</a> (PhD at TAMU, co-advised by Jeeeun Kim)</li>		
+		<li><a href="https://people.tamu.edu/~qianlu/">Emory Lu</a> (PhD at TAMU, co-advised by Jeeeun Kim)</li>		
+		<li><a href="https://github.com/cc50121">Yechi Ma</a> (PhD at ZJU, co-advised by Wei Hua)</li>		
 		<li><a href="https://www.linkedin.com/in/anweshabasu98/">Anwesha Basu</a> (MS at TAMU)</li>
 		<li><a href="./">Hou Un Lei</a> (MS at UMacau)</li>
 		<li><a href="./">Garfield Siyun Ke</a> (MS at UMacau, co-advised by Joseph Dexter)</li>
