--- a/publication.html
+++ b/publication.html
@@ -105,6 +105,37 @@ In <a href="https://wacv.thecvf.com/Conferences/2026">WACV</a>, 2026<br>
 
 
 
+
+
+
+<tr>
+<td width="35%" height=150>
+<a href="https://www.biorxiv.org/content/10.1101/2024.09.23.612957v1">
+<img src="aimerykong_files/icon_C3C4-v2.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://www.biorxiv.org/content/10.1101/2024.09.23.612957v1"><b>Deep learning of fossil pollen morphology reveals 25,000 years of ecological change in East African grasslands</b></a>
+<br>
+MÉ Adaimé, S. Kong, M. Urban,  FA Street-Perrott,  D. Verschuren,  SW. Punyasena
+<br>
+preprint at bioRxiv, 2026<br>
+[<a href="https://www.biorxiv.org/content/10.1101/2024.09.23.612957v3">paper</a>]
+[<a href="https://github.com/paleopollen/Pollen_Diversity_Dynamics">code</a>]
+<br>
+</td>
+
+	
+
+
+
+
+
+
+
+	
+
+
 <tr>
 <td width="35%" height=150>
 <a href="https://github.com/WangYZ1608/BPT">
@@ -462,26 +493,6 @@ In NeurIPS, 2024<br>
 	
 
 
-
-<tr>
-<td width="35%" height=150>
-<a href="https://www.biorxiv.org/content/10.1101/2024.09.23.612957v1">
-<img src="aimerykong_files/icon_C3C4-v2.jpg" height="120"  border="0">
-</a><br>
-</td>
-<td>
-<a href="https://www.biorxiv.org/content/10.1101/2024.09.23.612957v1"><b>Reconstructing the diversity dynamics of paleo-grasslands using deep learning on superresolution images of fossil Poaceae pollen
-</b></a>
-<br>
-MÉ Adaimé, S. Kong, M. Urban,  FA Street-Perrott,  D. Verschuren,  SW. Punyasena
-<br>
-preprint at bioRxiv, 2024<br>
-[<a href="https://www.biorxiv.org/content/10.1101/2024.09.23.612957v1">paper</a>]
-[<a href="https://github.com/paleopollen/Pollen_Diversity_Dynamics">code</a>]
-<br>
-</td>
-
-	
 
 	
 <tr>
