--- a/index.html
+++ b/index.html
@@ -189,6 +189,44 @@
 <ul style="font-size:15px;font-family:Times;line-height:20px">
 
 
+
+
+<li>
+<p>
+Congratulations to <a href="https://tian1327.github.io/">Dr. Tian Liu</a> on the successful PhD defense! (2/12/2026)
+</a>
+</li>
+
+
+
+
+
+	
+<li>
+<p>
+Congratulations to  <a href="https://abulalarabi.com/"  target="_blank">Arabi</a> on the <a href="https://chi2026.acm.org/"  target="_blank">CHI'26<img src="./img2/logo_chi26.jpg", height="25"></a> 
+	paper "<a href="https://github.com/abulalarabi/EUREXA"  target="_blank">EUREXA: End-User Reconfiguration of Environment with eXplainable Augmentation for Generative Fabrication</a>"! (2/9/2026)
+</a>
+</li>
+
+
+
+	
+
+
+<li>
+<p>
+Congratulations to  <a href="https://github.com/IMRL/Super-LiDAR-Intensity"  target="_blank">Wei</a> on the RA-L<img src="./img2/logo_RA-L.jpg", height="25"> 
+	paper "<a href="https://github.com/IMRL/Super-LiDAR-Intensity"  target="_blank">Super LiDAR Intensity for Robotic Perception</a>"! (1/27/2026)
+</a>
+</li>
+
+
+
+
+
+	
+	
 <li>
 <p>
 Congratulations to  <a href="https://github.com/mayechi/Pro3D"  target="_blank">Yechi</a> on the <a href="https://wacv.thecvf.com/Conferences/2026"  target="_blank">WACV'26
