--- a/publication.html
+++ b/publication.html
@@ -46,7 +46,7 @@
 
 <tr>
 <td width="35%" height=150>
-<a href="./">
+<a href="https://ieeexplore.ieee.org/document/11395610">
 <img src="aimerykong_files/icon_SuperLIDAR.jpg" height="120"  border="0">
 </a><br>
 </td>
@@ -56,7 +56,7 @@
 W. Gao, J. Zhang, M. Zhao, Z. Zhang, S. Kong, M. Ghaffari, D. Song, C-Z Xu, H. Kong
 <br>
 IEEE Robotics and Automation Letters (RA-L), 2026<br>
-[<a href="https://arxiv.org/abs/2508.10398">tech report</a>]
+[<a href="https://ieeexplore.ieee.org/document/11395610">paper</a>]
 [<a href="https://anonymous.4open.science/r/Super_supplementary_material-6799/README.md">dataset</a>]
 [code]
 [webpage]
