--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@ Congratulations to  <a href="https://abulalarabi.com/"  target="_blank">Arabi</a
 
 <li>
 <p>
-Congratulations to  <a href="https://github.com/IMRL/Super-LiDAR-Intensity"  target="_blank">Wei</a> on the RA-L<img src="./img2/logo_RA-L.jpg", height="25"> 
-	paper "<a href="https://github.com/IMRL/Super-LiDAR-Intensity"  target="_blank">Super LiDAR Intensity for Robotic Perception</a>"! (1/27/2026)
+Congratulations to  <a href="https://ieeexplore.ieee.org/document/11395610"  target="_blank">Wei</a> on the RA-L<img src="./img2/logo_RA-L.jpg", height="25"> 
+	paper "<a href="https://ieeexplore.ieee.org/document/11395610"  target="_blank">Super LiDAR Intensity for Robotic Perception</a>"! (1/27/2026)
 </a>
 </li>
 
