--- a/index.html
+++ b/index.html
@@ -164,15 +164,16 @@
 		
 <h3 style="font-size:20px;font-family:Times">Professional services</h3>
 <ul style="font-size:15px;font-family:Times;line-height:18px">	
-	<li>	Area Chair at <a href="https://neurips.cc/Conferences/2024"  target="_blank">NeurIPS'24</a>, <a href="https://neurips.cc/"  target="_blank">NeurIPS'25</a>;
+	<li>	Area Chair: <a href="https://neurips.cc/Conferences/2024"  target="_blank">NeurIPS'24</a>, <a href="https://neurips.cc/"  target="_blank">NeurIPS'25</a>;
 	</li>
-	<li>	<a href="https://cvpr.thecvf.com/Conferences/2024"  target="_blank">Demo Chair at CVPR'24</a>;
+	<li>	Demo Chair: <a href="https://cvpr.thecvf.com/Conferences/2024"  target="_blank">CVPR'24</a>, <a href="https://cvpr.thecvf.com/Conferences/2026" target="_blank">CVPR'26</a>
 	</li>
-	<li>	organizer: <a href="https://vplow.github.io/"  target="_blank">Open-World Vision workshops at CVPR & WACV</a>; 
+	<li>	organizer: <a href="https://vplow.github.io/"  target="_blank">Open-World Vision workshops at CVPR & WACV</a>,
+			<a href="https://autoexpert-arena.github.io/"  target="_blank">AutoExpert workshop at CVPR</a>; 
 	</li>
-	<li>	<a href="https://www.sciencedirect.com/journal/pattern-recognition"  target="_blank">Associate Editor: Pattern Recognition</a>;
+	<li>	Associate Editor: <a href="https://www.sciencedirect.com/journal/pattern-recognition"  target="_blank">Pattern Recognition</a>;
 	</li>
-	<li>	Panalist: NSF GRFP
+	<li>	Grant Reviewer/Panalist: NSF GRFP, LTI by the Austrian Federal Ministry of Education, Science and Research;
 	</li>	
 	<li>	Reviewers/program committee: CVPR, ICCV, ECCV, ICLR, NeurIPS, ACL, ICML, IJCV, PAMI, Nature, PLOS One, RA-L, TIP, etc.
 	</li>	
