--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <p style="font-size:16px;font-family:Times"> I am on the faculty of 
 		<a href="https://www.fst.um.edu.mo/people/skong/"  target="_blank">FST</a>,  
 		<a href="https://www.um.edu.mo/"  target="_blank">University of Macau</a>, 
-		leading the <a href="group.html">Computer Vision Lab</a>. I will be with the <a href="https://www.oist.jp/">Okinawa Institute of Science and Technology (OIST)</a> in the summer of 2026. 
+		leading the <a href="group.html">Computer Vision Lab</a>. I will be with the <a href="https://www.oist.jp/" target="_blank">Okinawa Institute of Science and Technology (OIST)</a> in the summer of 2026. 
 		I was an Assistant Professor in the Department of <a href="https://engineering.tamu.edu/cse"  target="_blank">CSE</a> at 
 		<a href="https://www.tamu.edu/"  target="_blank">Texas A&M University</a>.
 		  I did my postdoc training at the <a href="https://www.ri.cmu.edu/"  target="_blank">Robotics Institute</a>, <a href="https://www.cmu.edu/"  target="_blank">CMU</a>, 
