--- a/index.html
+++ b/index.html
@@ -50,11 +50,13 @@
 	<p style="font-size:16px;font-family:Times">
 		My research lies in <strong>Computer Vision</strong> and its interactions with other fields (e.g., ML, NLP, HCI, robotics, and graphics), broad
 		applications (e.g., AR/VR and autonomous driving), and diverse disciplines (e.g., biology and paleoecology). 
-		I am establishing the research topic <a href="https://vplow.github.io"  target="_blank"><strong>Open-World Vision</strong></a>, on which my previous paper was recognized for <a href="https://arxiv.org/abs/2104.02939"  target="_blank">Best Paper / Marr Prize at ICCV 2021</a>.
+		I have been promoting the research topic <a href="https://vplow.github.io"  target="_blank"><strong>Open-World Vision</strong></a>, 
+		on which my ICCV'21 paper was recognized for <a href="https://arxiv.org/abs/2104.02939"  target="_blank">Best Paper / Marr Prize</a>.		
 		On this topic, I study how to make vision algorithm applicable in the real open world, e.g., through interdisciplinary research.
 		My previous interdisciplinary research built a high-throughput pollen analysis system,
 		which was featured by the National Science Foundation that 
-		“<a href="https://beta.nsf.gov/news/modern-computational-tools-open-new-era-fossil-pollen-research"  target="_blank">opens a new era of fossil pollen research</a>”.
+		"<a href="https://beta.nsf.gov/news/modern-computational-tools-open-new-era-fossil-pollen-research"  target="_blank">opens a new era of fossil pollen research</a>".
+		Currently, I'm establishing the research theme <a href="https://autoexpert-arena.github.io/">Auto-Annotation from Expert-Crafted Annotation Guidelines (AutoExpert)</a>.
 	</p>
 
 
@@ -73,7 +75,7 @@
 			I am actively looking for self-motivated PhD students at <a href="https://grs.um.edu.mo/index.php/prospective-students/doctoral-degrees-programmes/"  target="_blank">CIS, FST, University of Macau</a>.
 			PhD students will be fully funded with fellowships.
 		</font>
-			I am NOT actively looking for PhD students at <a href="https://engineering.tamu.edu/cse/admissions-and-aid/graduate-admissions/index.html"  target="_blank">CSE, TAMU</a>.
+			I am NOT taking PhD applicants in <a href="https://engineering.tamu.edu/cse/admissions-and-aid/graduate-admissions/index.html"  target="_blank">CSE, TAMU</a>.
 		
 	</p>
 
