--- a/index.html
+++ b/index.html
@@ -104,8 +104,40 @@
 	</li>
 	</ul-->
 
+
+			
+
 		
-<h3 style="font-size:20px;font-family:Times">Links</h3>
+<h3 style="font-size:20px;font-family:Times">Teaching</h3>
+<ul style="font-size:15px;font-family:Times;line-height:18px">	
+	<li>
+		[CISC7401] Advanced Machine Learning [<a href="./aimerykong_files/2025-2-CISC7401-001-ADVANCED-MACHINE-LEARNING.pdf"  target="_blank">syllabus</a>] (Spring 2026, UMacau)
+	</li>
+	<li>
+		[CISC3011] Digital Image Processing [<a href="./aimerykong_files/2025-1-CISC3011-Digital-Image-Processing.pdf"  target="_blank">syllabus</a>] (Fall 2025, UMacau)
+	</li>
+	<li>
+		[CISC7401] Advanced Machine Learning [<a href="./aimerykong_files/2024-2-CISC7401-001-ADVANCED-MACHINE-LEARNING.pdf"  target="_blank">syllabus</a>] (Spring 2025, UMacau)
+	</li>
+	<li>
+		[CISC3027] Visual Perception and Learning in the Open World [<a href="./aimerykong_files/CISC3027-2024-2025_Shu-KONG.pdf"  target="_blank">syllabus</a>] (Fall 2024, UMacau)
+	</li>
+	<li>
+		[CISC7014] Visual Perception and Learning in the Open World [<a href="./aimerykong_files/CISC7014_2023-2024.pdf"  target="_blank">syllabus</a>] (Spring 2024, UMacau)
+	</li>
+	<li>
+		[CISC3027] Visual Perception and Learning in the Open World (Fall 2023, UMacau)
+	</li>
+	<li>
+	[CSCE689] Visual Learning for Visual Recognition (Spring 2023, TAMU)
+	</li>
+</ul>
+
+
+
+			
+			
+<h3 style="font-size:20px;font-family:Times">Workshops</h3>
 <ul style="font-size:15px;font-family:Times;line-height:18px">	
 	<li>
 	<a href="https://autoexpert-arena.github.io/"  target="_blank">The 1st AutoExpert Workshop at CVPR'26</a>
@@ -135,33 +167,6 @@
 	<a href="http://vplow.github.io/open-world-vision.html"  target="_blank">The 1st Open World Vision Workshop at CVPR'21</a>
 	</li>
 </ul>
-
-		
-<h3 style="font-size:20px;font-family:Times">Teaching</h3>
-<ul style="font-size:15px;font-family:Times;line-height:18px">	
-	<li>
-		[CISC7401] Advanced Machine Learning [<a href="./aimerykong_files/2025-2-CISC7401-001-ADVANCED-MACHINE-LEARNING.pdf"  target="_blank">syllabus</a>] (Spring 2026, UMacau)
-	</li>
-	<li>
-		[CISC3011] Digital Image Processing [<a href="./aimerykong_files/2025-1-CISC3011-Digital-Image-Processing.pdf"  target="_blank">syllabus</a>] (Fall 2025, UMacau)
-	</li>
-	<li>
-		[CISC7401] Advanced Machine Learning [<a href="./aimerykong_files/2024-2-CISC7401-001-ADVANCED-MACHINE-LEARNING.pdf"  target="_blank">syllabus</a>] (Spring 2025, UMacau)
-	</li>
-	<li>
-		[CISC3027] Visual Perception and Learning in the Open World [<a href="./aimerykong_files/CISC3027-2024-2025_Shu-KONG.pdf"  target="_blank">syllabus</a>] (Fall 2024, UMacau)
-	</li>
-	<li>
-		[CISC7014] Visual Perception and Learning in the Open World [<a href="./aimerykong_files/CISC7014_2023-2024.pdf"  target="_blank">syllabus</a>] (Spring 2024, UMacau)
-	</li>
-	<li>
-		[CISC3027] Visual Perception and Learning in the Open World (Fall 2023, UMacau)
-	</li>
-	<li>
-	[CSCE689] Visual Learning for Visual Recognition (Spring 2023, TAMU)
-	</li>
-</ul>
-
 
 		
 <h3 style="font-size:20px;font-family:Times">Professional services</h3>
