--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
 			
 			
-<h3 style="font-size:20px;font-family:Times">Workshops</h3>
+<!--h3 style="font-size:20px;font-family:Times">Workshops</h3>
 <ul style="font-size:15px;font-family:Times;line-height:18px">	
 	<li>
 	<a href="https://autoexpert-arena.github.io/"  target="_blank">The 1st AutoExpert Workshop at CVPR'26</a>
@@ -166,21 +166,45 @@
 	<li>
 	<a href="http://vplow.github.io/open-world-vision.html"  target="_blank">The 1st Open World Vision Workshop at CVPR'21</a>
 	</li>
+</ul-->
+
+
+<h3 style="font-size:20px;font-family:Times">Workshops</h3>
+<ul style="font-size:15px;font-family:Times;line-height:18px">	
+	<li>
+	The AutoExpert Workshop: <a href="https://autoexpert-arena.github.io/"  target="_blank">1st at CVPR'26</a>
+	</li>	
+	<li>
+	The Open World Vision Workshop: 
+		<a href="https://vplow.github.io/vplow_6th.html"  target="_blank">6th at CVPR'26</a>,
+		<a href="https://vplow.github.io/vplow_5th.html"  target="_blank">5th at CVPR'25</a>,
+		<a href="https://vplow.github.io/vplow_4th.html"  target="_blank">4th at CVPR'24</a>,
+		<a href="https://vplow.github.io/vplow_3rd.html"  target="_blank">3rd at CVPR'23</a>,
+		<a href="http://vplow.github.io/vplow.html"  target="_blank">2nd at CVPR'22</a>,
+		<a href="http://vplow.github.io/open-world-vision.html"  target="_blank">1st at CVPR'21</a>,
+	</li>
+	<li>
+	The Workshop of Dealing with Novelty in Open Worlds (DNOW): 
+		<a href="https://www.cs.umd.edu/~pulkit/DNOW_workshop_2/"  target="_blank">2nd at WACV'23</a>, 
+		<a href="https://www.cs.umd.edu/~pulkit/DNOW_workshop/"  target="_blank">1st at WACV'22</a>,
+	</li>
 </ul>
 
+
+			
 		
 <h3 style="font-size:20px;font-family:Times">Professional services</h3>
 <ul style="font-size:15px;font-family:Times;line-height:18px">	
-	<li>	Area Chair: <a href="https://neurips.cc/Conferences/2024"  target="_blank">NeurIPS'24</a>, <a href="https://neurips.cc/"  target="_blank">NeurIPS'25</a>;
+	<li>	Area Chair: <a href="https://neurips.cc/Conferences/2024"  target="_blank">NeurIPS'24</a>; <a href="https://neurips.cc/"  target="_blank">NeurIPS'25</a>;
 	</li>
-	<li>	Demo Chair: <a href="https://cvpr.thecvf.com/Conferences/2024"  target="_blank">CVPR'24</a>, <a href="https://cvpr.thecvf.com/Conferences/2026" target="_blank">CVPR'26</a>
+	<li>	Demo Chair: <a href="https://cvpr.thecvf.com/Conferences/2024"  target="_blank">CVPR'24</a>; <a href="https://cvpr.thecvf.com/Conferences/2026" target="_blank">CVPR'26</a>
 	</li>
-	<li>	organizer: <a href="https://vplow.github.io/"  target="_blank">Open-World Vision workshops at CVPR & WACV</a>,
+	<li>	organizer: <a href="https://vplow.github.io/"  target="_blank">Open-World Vision workshops at CVPR & WACV</a>;
 			<a href="https://autoexpert-arena.github.io/"  target="_blank">AutoExpert workshop at CVPR</a>; 
 	</li>
 	<li>	Associate Editor: <a href="https://www.sciencedirect.com/journal/pattern-recognition"  target="_blank">Pattern Recognition</a>;
 	</li>
-	<li>	Grant Reviewer/Panalist: NSF GRFP, LTI by the Austrian Federal Ministry of Education, Science and Research;
+	<li>	Grant Reviewer/Panalist: NSF GRFP; LTI by the Austrian Federal Ministry of Education, Science and Research;
 	</li>	
 	<li>	Reviewers/program committee: CVPR, ICCV, ECCV, ICLR, NeurIPS, ACL, ICML, IJCV, PAMI, Nature, PLOS One, RA-L, TIP, etc.
 	</li>	
